Changed background color of dashboard

--- a/myapp/templates/upload_audio.html
+++ b/myapp/templates/upload_audio.html
@@ -4,7 +4,7 @@
     <title>Audio Recorder</title>
     <style>
         body {
-            background-color: #f2f2f2; /* Set your desired background color */
+            background-color: #23970089; /* Set your desired background color */
             text-align: center; /* Center align the content */
         }
 
